# qtchat

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  i18n.qrc  icons.qrc  qtchat.pro
distrib/linux/: qtchat.desktop
i18n/: qtchat_en.ts  qtchat_fr.qm  qtchat_fr.ts  qtchat_nl.qm  qtchat_nl.ts
src/: aboutdialog.cpp  aboutdialog.h  chatroom.cpp  chatroom.h  chatroom.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messaginglayer.cpp  messaginglayer.h  receivefiledialog.cpp  receivefiledialog.h  receivefiledialog.ui  sendfiledialog.cpp  sendfiledialog.h  sendfiledialog.ui  settings.cpp  settings.h  settings.ui  textedit.cpp  textedit.h  user.cpp  user.h  userdetailsdialog.cpp  userdetailsdialog.h  userdetailsdialog.ui  userlist.cpp  userlist.h  usermanager.cpp  usermanager.h  userwidget.cpp  userwidget.h
